// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/AuditDetail/ResultDescribe render snap when has value 1`] = `
<body>
  <div>
    <div
      class="css-lpwde2"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="edit-2-fill"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
            fill="#8A8F99"
            id="Vector"
          />
        </g>
      </svg>
      <input
        class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper result-describe-input css-1pd1cd5"
        placeholder="添加说明"
        type="text"
        value="this is a desc"
      />
    </div>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/ResultDescribe render snap when value is empty 1`] = `
<body>
  <div>
    <div
      class="css-lpwde2"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="edit-2-fill"
        >
          <path
            d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
            fill="#8A8F99"
            id="Vector"
          />
        </g>
      </svg>
      <input
        class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper result-describe-input css-1pd1cd5"
        placeholder="添加说明"
        type="text"
        value=""
      />
    </div>
  </div>
</body>
`;
